# cookiecutter-bireli

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  SECURITY.md  SECURITY.rst  cookiecutter.json  frozen.txt  pytest.ini  sphinx_reload.py  tox.ini
{{ cookiecutter.project_name }}/: .gitignore  Makefile  README.rst  composition-manifest.json  cookiebaked.json  manage.py  pyproject.toml
{{ cookiecutter.project_name }}/composition/: __init__.py
{{ cookiecutter.project_name }}/composition/apps/: __init__.py
{{ cookiecutter.project_name }}/composition_repository/api/: __init__.py  requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/axes/: requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/ckeditor/: requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/cmsplugin_blocks/: __init__.py  disk.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/crispy/: requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/dal/: requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/diskette/: __init__.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/django_builtins/: .env  disk.py  settings.py
{{ cookiecutter.project_name }}/composition_repository/django_filer/: disk.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/djangocms/: __init__.py  disk.py  requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/djangocms_audio/: disk.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/djangocms_file/: __init__.py  disk.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/djangocms_lotus/: __init__.py  disk.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/djangocms_picture/: __init__.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/djangocms_video/: disk.py  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/fobi/: __init__.py  disk.py  requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/icomoon/: requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/import_export/: requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/lotus/: __init__.py  disk.py  requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/project_sitemaps/: settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/project_utils/: settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/recaptcha/: .env  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/request_form/: disk.py  requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/search/: requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/sendfile/: .env  requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/smart_media/: requirements.txt  settings.py
{{ cookiecutter.project_name }}/composition_repository/staticpages/: requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/styleguide/: .env  requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/taggit/: __init__.py  disk.py  settings.py
{{ cookiecutter.project_name }}/composition_repository/two_factor_auth/: requirements.txt  settings.py  urls.py
{{ cookiecutter.project_name }}/composition_repository/webpack/: .env  requirements.txt  settings.py
{{ cookiecutter.project_name }}/django-apps/project_api/: apps.py  urls.py
{{ cookiecutter.project_name }}/django-apps/project_sitemaps/: apps.py  sitemaps.py  urls.py
{{ cookiecutter.project_name }}/django-apps/project_utils/: apps.py  cms_tests.py  cms_toolbars.py  composer_check.py  context_processors.py  diskette_definitions.py  exceptions.py  factories.py  helpers.py  initial.json  initial_loader.py  logger.py  logging.py  (+5 more)
{{ cookiecutter.project_name }}/frontend/: .stylelintignore  package.json  webpack.config.js
{{ cookiecutter.project_name }}/project/: __init__.py  urls.py  wsgi.py
{{ cookiecutter.project_name }}/requirements/: base.txt  base_template.txt  codestyle.txt  composer.txt  development.txt  production.txt  toolbox.txt
{{ cookiecutter.project_name }}/tests/: conftest.py
(+225 files in other folders)
