[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
requires-python = "{{ cookiecutter._python_version }}"

[tool.pytest.ini_options]
minversion = "7.0"
DJANGO_SETTINGS_MODULE = "project.settings"
DJANGO_CONFIGURATION = "Test"
addopts = "-vv"
testpaths = [
    "tests",
]
python_files = [
    "*.py",
]
pythonpath = [
    ".",
    "django-apps",
]

[tool.project_composer]
collection = [
    "django_builtins",
    "djangocms",
    "django_filer",
    "ckeditor",
    "icomoon",
    "staticpages",
    "styleguide",
    "webpack",
]
repository = "composition_repository"
syspaths = [
    ".",
]

[tool.project_composer.requirements]
template = "requirements/base_template.txt"
application_label = "# {name}\n"
application_divider = "\n"
