[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.__version }}"
requires-python = "{{ cookiecutter._python_version }}"

[tool.pytest.ini_options]
minversion = "7.0"
DJANGO_SETTINGS_MODULE = "project.settings"
DJANGO_CONFIGURATION = "Test"
addopts = "-vv"
testpaths = [
    "tests",
]
python_files = [
    "*.py",
]
pythonpath = [
    ".",
    "django-apps",
]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango41Warning",
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    #"ignore::DeprecationWarning",
]

[tool.project_composer]
collection = [
    "django_builtins",
    "sendfile",
    "django_filer",
    "ckeditor",
    "webpack",
    "project_utils",
    "recaptcha",
    "icomoon",
    "fobi",
    "staticpages",
    "styleguide",
    "djangocms",
]
repository = "composition_repository"
syspaths = [
    ".",
]

[tool.project_composer.requirements]
template = "requirements/base_template.txt"
application_label = "# {name}\n"
application_divider = "\n"

{% if cookiecutter.versioning == "bumpver" %}[bumpver]
current_version = "{{ cookiecutter.__version }}"
version_pattern = "YY.0W.INC0"
commit_message = "[NEW] Setup bump version {old_version} -> {new_version} !ignore"
commit = true
tag = true

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]{% endif %}
