[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.__version }}"
requires-python = "{{ cookiecutter._python_version }}"

[tool.pytest.ini_options]
minversion = "7.0"
DJANGO_SETTINGS_MODULE = "project.settings"
DJANGO_CONFIGURATION = "Test"
addopts = "-v --tb=long"
testpaths = [
    "tests",
]
python_files = [
    "*.py",
]
pythonpath = [
    ".",
    "django-apps",
]
filterwarnings = [
    #"ignore::django.utils.deprecation.RemovedInDjango51Warning",
    #"ignore::DeprecationWarning",
]

[tool.bireli]
app_template = "https://github.com/sveetch/cookiecutter-bireli-newapp.git#{{ cookiecutter._bireli_newapp_version }}"

[tool.project_composer]
collection = [
    "dal",
    "django_builtins",
    "smart_media",
    "sendfile",
    "django_filer",
    "ckeditor",
    "crispy",
    "webpack",
    "project_utils",
    "staticpages",
    "styleguide",
    "taggit",
    "lotus",
    "djangocms",
    "cmsplugin_blocks",
    "project_sitemaps",
    "diskette",
]
repository = "composition_repository"
syspaths = [
    ".",
]

[tool.project_composer.requirements]
template = "requirements/base_template.txt"
application_label = "# {name}\n"
application_divider = "\n"

{% if cookiecutter.versioning == "bumpver" %}[bumpver]
current_version = "{{ cookiecutter.__version }}"
version_pattern = "YY.0W.INC0"
commit_message = "[NEW] Setup bump version {old_version} -> {new_version} !ignore"
commit = true
tag = true

[bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]{% endif %}

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "/(.venv|tests|frontend|dist|migrations|project/static|project/static-sources|project/templates)/"
skip-magic-trailing-comma = true

[tool.autopep8]
max_line_length = 88
in-place = true
recursive = true
aggressive = 1
exclude = ".venv,*/tests/,frontend,dist,*/migrations/,project/mods_enabled/,project/static/,project/static-sources/,project/templates/"

[tool.djlint]
profile = "django"
require_pragma = false
use_gitignore = true
indent = 4
max_line_length = 120
ignore = "H006,H017,H021,H030,H031,T002"
